# operandi

./: -h  .dockerignore  .env  .gitattributes  .gitignore  .nextflow.log.2  Dockerfile  Makefile  OPERANDI_arch.drawio.xml  README.md  docker-compose-tests.yml  docker-compose.yml  docker-compose_image_based.yml  docker.env  report.html.2  requirements.txt  requirements_test.txt  traefik.yaml
.github/workflows/: ci_cd.yml
.nextflow/: history
ExampleWorkflows/: README.md
ExampleWorkflows/CWL/: README.md  clean.sh  ocrd-anybaseocr-crop.cwl  ocrd-cis-ocropy-binarize.cwl  parallel_workflow.cwl  prepare.sh  prepare_parallel.sh  (+1 more)
cfg/: haproxy.cfg
docs/: Appendix.md  README_architecture.md  README_benchmarking.md  README_doc_admin.md  README_doc_developer.md  README_doc_tester.md  README_doc_user.md  ocrd_docker_images_info.txt
src/: Dockerfile_broker  Dockerfile_rabbitmq  Dockerfile_server  SimpleCode.py  definitions.json  rabbitmq_definitions.json
src/broker/: pyproject.toml  requirements.txt  setup.py
src/broker/operandi_broker/: __init__.py  broker.py  broker_utils.py  cli.py  constants.py  job_download_worker.py  job_status_worker.py  job_submit_worker.py  job_worker_base.py  job_worker_download.py  job_worker_status.py  job_worker_submit.py  utils.py  worker.py
src/broker/operandi_broker/batch_scripts/: create_sif_ocrd_all_maximum_batch.sh  download_all_ocrd_models.sh  submit_workflow_job.sh
src/client/: pyproject.toml  requirements.txt  setup.py
src/client/operandi_client/: __init__.py  cli.py  client.py  client_utils.py  constants.py
src/harvester/: constants.py  harvester.py  pyproject.toml  requirements.txt  setup.py
src/harvester/harvester/: __init__.py  config.toml  constants.py  harvester.py  harvester_cli.py  nextflow_script.nf  server_requests.py  utils.py  vd18IDs.txt
src/harvester/harvester/cli/: __init__.py  harvest.py
src/harvester/operandi_harvester/: __init__.py  cli.py  constants.py  harvester.py  harvester_utils.py  server_requests.py  utils.py
src/harvester/operandi_harvester/assets/: default_workflow.nf  nextflow_script.nf
src/server/: pyproject.toml  requirements.txt  setup.py
src/server/operandi_server/: __init__.py  authentication.py  cli.py  constants.py  exceptions.py  files_manager.py  server.py  server_utils.py  utils.py
src/server/operandi_server/managers/: __init__.py  constants.py  manager_utils.py  manager_workflows.py  manager_workspaces.py  nextflow_manager.py  resource_manager.py  utils.py  workflow_manager.py  workspace_manager.py
src/server/operandi_server/models/: __init__.py  base.py  discovery.py  processor.py  user.py  workflow.py  workspace.py
src/server/operandi_server/otn/: __init__.py  constants.py  converter.py  utils.py
src/server/operandi_server/otn/models/: __init__.py  constants.py  nf_block_process.py  nf_block_workflow.py  nf_file_executable.py
src/server/operandi_server/otn/validators/: ocrd_validator.py  validator_utils.py
src/server/operandi_server/routers/: __init__.py  admin_panel.py  constants.py  discovery.py  ola_hd.py  ola_hd_utils.py  oton.py  oton_utils.py  password_utils.py  processor.py  user.py  user_utils.py  workflow.py  workflow_utils.py  workspace.py  workspace_utils.py
src/utils/: pyproject.toml  requirements.txt  setup.py
src/utils/operandi_utils/: Grafana_Documentation.md  __init__.py  batch_script_builder.py  constants.py  hpc_connector.py  hpc_constants.py  logging.py  logging_constants.py  rabbitmq_constants.py  traces_script.py  utils.py  validators.py
src/utils/operandi_utils/database/: __init__.py  base.py  constants.py  database.py  db_hpc_slurm_job.py  db_processing_statistics.py  db_processing_stats.py  db_processing_stats_total.py  db_user_account.py  db_workflow.py  db_workflow_job.py  db_workspace.py  models.py  models_stats.py
src/utils/operandi_utils/hpc/: __init__.py  batch_script_builder.py  connection_utils.py  connector.py  constants.py  executor.py  io_transfer.py  nhr_connector.py  nhr_executor.py  nhr_executor_cmd_wrappers.py  nhr_executor_utils.py  nhr_transfer.py  transfer.py  utils.py
src/utils/operandi_utils/hpc/batch_scripts/: batch_check_ocrd_all_version.sh  batch_check_ocrd_processor_versions.sh  batch_create_ocrd_all_maximum_sif.sh  batch_create_ocrd_slim_sif_images.sh  batch_download_ocrd_all_models.sh  batch_submit_workflow_job.sh  create_sif_ocrd_all_maximum.sh  download_all_ocrd_models.sh  invoke_batch_script.sh  ocrd_all_version.sh  submit_workflow_job.sh  test_submit_workflow_job.sh  wrapper_check_workflow_job_status.sh  wrapper_submit_workflow_job.sh
src/utils/operandi_utils/hpc/nextflow_workflows/: default_workflow.nf  default_workflow_with_MS.nf  odem_workflow.nf  odem_workflow_with_MS.nf  sbb_workflow.nf  sbb_workflow_with_MS.nf  template_workflow.nf  template_workflow_with_MS.nf
src/utils/operandi_utils/hpc/ocrd_process_workflows/: default_workflow.txt  odem_workflow.txt  sbb_workflow.txt  template_workflow.txt
src/utils/operandi_utils/oton/: __init__.py  cli.py  constants.py  converter.py  nf_block_process.py  nf_block_workflow.py  nf_file_executable.py  ocrd_all_tool.json  ocrd_loader.py  ocrd_parser.py  ocrd_validator.py  oton_converter.py  parser.py  process_call_arguments.py  utils.py  validator.py
src/utils/operandi_utils/oton/models/: __init__.py  nf_block_process.py  nf_block_workflow.py  nf_file_executable.py
src/utils/operandi_utils/rabbitmq/: __init__.py  connector.py  constants.py  consumer.py  publisher.py  wrappers.py
tests/: .env  conftest.py  constants.py  docker-compose.yml  helpers_asserts.py  helpers_utils.py  requirements.txt  test_SimpleCode.py  test_hpc_connector.py  test_integration_1_db.py  test_integration_2_rabbitmq.py  test_integration_3_hpc_transfer.py  test_integration_3_hpc_xcombined.py  test_integration_4_broker.py  test_integration_5_harvester.py  test_integration_5_server_1_root.py  test_integration_5_server_2_workflow.py  test_integration_5_server_3_workspace.py  test_integration_6_harvester.py  test_integration_6_server.py  utils_test.py
web/: Dockerfile  go.mod  web.go
(+291 files in other folders)
