[build-system]
requires = ["setuptools>=69.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "operandi-broker"
version = "2.24.0"
authors = [{name = "Mehmed Mustafa", email = "mehmed.mustafa@gwdg.de"}]
license = {text = "Apache License 2.0"}
description = "Broker for Operandi"
requires-python = ">=3.10"
dependencies = ["operandi-utils>=2.24.0"]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.scripts]
operandi-broker = "operandi_broker:cli"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
include = ["operandi_broker*"]
