[build-system]
requires = ["setuptools>=69.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "operandi-harvester"
version = "2.24.0"
authors = [{name = "Mehmed Mustafa", email = "mehmed.mustafa@gwdg.de"}]
license = {text = "Apache License 2.0"}
description = "Harvester for Operandi"
requires-python = ">=3.10"
dependencies = ["operandi-utils>=2.24.0"]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.scripts]
operandi-harvester = "operandi_harvester:cli"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
include = ["operandi_harvester*"]

[tool.setuptools.package-data]
operandi_utils = [
    "assets/*.ocrd.zip",
    "assets/*.json",
    "assets/*.txt",
    "assets/*.nf"
]
