[build-system]
requires = ["setuptools>=69.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "operandi-server"
version = "2.24.0"
authors = [{name = "Mehmed Mustafa", email = "mehmed.mustafa@gwdg.de"}]
license = {text = "Apache License 2.0"}
description = "Server for Operandi"
requires-python = ">=3.10"
dependencies = [
    "operandi-utils>=2.24.0",
    "fastapi>=0.95.0",
    "uvicorn==0.21.0",
    "psutil"
]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.scripts]
operandi-server = "operandi_server:cli"

[tool.setuptools]
packages = { find = {} }
include-package-data = true
