[build-system]
requires = ["setuptools>=69.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "operandi-utils"
version = "2.24.0"
authors = [ { name = "Mehmed Mustafa", email = "mehmed.mustafa@gwdg.de" } ]
license = { text = "Apache License 2.0" }
description = "Shared utilities for Operandi"
requires-python = ">=3.10"
dependencies = [
    "aiofiles>=0.8.0",
    "beanie>=2.0.1",
    "chardet>=5.1.0",
    "click>=8.3.1",
    "clint>=0.5.1",
    "loguru>=0.6.0",
    "httpx>=0.28.1",
    "ocrd>=3.11.0",
    "paramiko>=4.0.0",
    "pika>=1.3.2",
    "pydantic>=2.12.5",
    "pymongo >= 4.16.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.22",
    "requests>=2.32.5"
]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.scripts]
oton-converter = "operandi_utils.oton:cli"

[tool.setuptools]
packages = { find = {} }
include-package-data = true

[tool.setuptools.package-data]
operandi_utils = [
    "hpc/batch_scripts/*.sh",
    "hpc/nextflow_workflows/*.nf",
    "hpc/ocrd_process_workflows/*.txt",
    "oton/ocrd-all-tool.json"
]
